--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "node index.js",
+        "start-dev:": "nodemon index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -15,6 +16,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongodb": "^3.6.6",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "socket.io": "^4.0.1"
     }
 }
